<resources>
    <string name="app_name">Assessment</string>
    <string name="welcome_to_assessment">Welcome to Assessment</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_roll_no">Enter Your Roll No.</string>
    <string name="button">Button</string>
    <string name="proceed">Proceed</string>
    <string name="result">Result</string>
    <string name="questionBox">TextView</string>
    <string name="next">Next</string>
    <string name="quit">QUIT</string>
    <string name="resultTitle">RESULT</string>
    <string name="wrongAnwsers">Wrong Anwsers</string>
    <string name="correctAnwsers">Correct Anwsers</string>
    <string name="questionAttempted">Question Attempted</string>
    <string name="shareBTN">Share</string>
    <string name="quitBTN">Quit</string>
    <string name="revise">revise</string>
    <string name="reviseBtn">ReviseBtn</string>
    <string name="rewise">REVISE</string>
    <string name="textview">TextView</string>
    <string name="saad_ali_khan">Saad Ali Khan</string>
    <string name="repo">repo</string>
    <string name="bcsf18a529">Bcsf18a529</string>
    <string name="move_to_repo">Move to repo</string>
    <string name="move_to_app">Move to App</string>
    <string name="_10">/10</string>
</resources>